adds README for sample project

--- a/sample-cluster-ocp/Makefile
+++ b/sample-cluster-ocp/Makefile
@@ -2,6 +2,9 @@
 
 all: domain
 
+init:
+	@terraform init
+
 network:
 	@echo "Builds network for OpenShift"
 	@terraform apply -target module.openshift_network
