--- a/modules/infrastructure/resources/openshift-inventory.yml
+++ b/modules/infrastructure/resources/openshift-inventory.yml
@@ -10,7 +10,7 @@ OSEv3:
     ansible_user: ${ansible_user}
     ansible_become: true
     openshift_deployment_type: ${openshift_deployment_type}
-    openshift_release: "v3.7"
+    openshift_release: "v${openshift_major_version}.0"
     containerized: true
     openshift_master_identity_providers:
       - name: 'test_identity_provider'
