--- a/modules/infrastructure/resources/origin-bastion-init.yml
+++ b/modules/infrastructure/resources/origin-bastion-init.yml
@@ -20,7 +20,7 @@ runcmd:
  - yum update
  - git clone https://github.com/openshift/openshift-ansible
  - mv openshift-ansible /usr/share/ansible/
- - cd /usr/share/ansible/openshift-ansible && git checkout -b release-3.7 origin/release-3.7
+ - cd /usr/share/ansible/openshift-ansible && git checkout -b release-${openshift_major_version} origin/release-${openshift_major_version}
  - curl https://amazon-ssm-ap-northeast-1.s3.amazonaws.com/latest/linux_amd64/amazon-ssm-agent.rpm -o amazon-ssm-agent.rpm
  - curl -L -o /usr/local/bin/ocinventory https://github.com/literalice/openshift-inventory-utils/releases/download/v0.1/ocinventory_unix
  - chmod +x /usr/local/bin/ocinventory
