--- a/modules/infrastructure/resources/openshift-inventory.yml
+++ b/modules/infrastructure/resources/openshift-inventory.yml
@@ -10,7 +10,8 @@ OSEv3:
     ansible_user: ${ansible_user}
     ansible_become: true
     openshift_deployment_type: ${openshift_deployment_type}
-    openshift_release: "v${openshift_major_version}.0"
+    openshift_image_tag: "${openshift_image_tag}"
+    openshift_pkg_version: "-${openshift_major_version}"
     containerized: true
     openshift_master_identity_providers:
       - name: 'test_identity_provider'
