--- a/modules/infrastructure/resources/openshift-inventory.yml
+++ b/modules/infrastructure/resources/openshift-inventory.yml
@@ -10,8 +10,8 @@ OSEv3:
     ansible_user: ${ansible_user}
     ansible_become: true
     openshift_deployment_type: ${openshift_deployment_type}
-    openshift_image_tag: "${openshift_image_tag}"
-    openshift_pkg_version: "-${openshift_major_version}"
+    openshift_release: "v${openshift_major_version}"
+    openshift_repos_enable_testing: ${openshift_repos_enable_testing}
     containerized: true
     openshift_master_identity_providers:
       - name: 'test_identity_provider'
