add cluster admin

--- a/modules/infrastructure/resources/bastion-init.yml
+++ b/modules/infrastructure/resources/bastion-init.yml
@@ -1,17 +1,6 @@
 #cloud-config
 locale: ja_JP.UTF-8
  
-write_files:
- - content: |
-      ${openshift_inventory}
-   owner: root
-   path: /etc/oc-inventory.yml
-   permissions: '0644'
- - content: |
-      ${openshift_install}
-   owner: root
-   path: /etc/oc-install.sh
-   permissions: '0755'
 rh_subscription:
   username: ${rhn_username}
   password: '${rhn_password}'
@@ -19,8 +8,6 @@ rh_subscription:
   add-pool: [ '${rh_subscription_pool_id}' ]
 runcmd:
  - subscription-manager repos --disable="*"
- - yum-config-manager --disable \*
+ # - yum-config-manager --disable \*
  - subscription-manager repos --enable="rhel-7-server-rpms" --enable="rhel-7-server-extras-rpms" --enable="rhel-7-server-ose-${openshift_major_version}-rpms" --enable="rhel-7-fast-datapath-rpms" --enable="rhel-7-server-ansible-2.4-rpms"
  - yum -y install atomic-openshift-utils atomic-openshift-clients
- - curl -L -o /usr/local/bin/ocinventory https://github.com/literalice/openshift-inventory-utils/releases/download/v0.1/ocinventory_unix
- - chmod +x /usr/local/bin/ocinventory
