fixes node's ASG scaling AZ for EBS PV

--- a/modules/infrastructure/resources/playbooks/openshift-policies/private/config.yml
+++ b/modules/infrastructure/resources/playbooks/openshift-policies/private/config.yml
@@ -3,7 +3,7 @@
   tasks:
   - name: cluster-admin
     oc_adm_policy_user:
-      user: {{ item }}
+      user: "{{ item }}"
       resource_kind: cluster-role
       resource_name: cluster-admin
       state: present
