--- a/modules/infrastructure/resources/bastion-init.yml
+++ b/modules/infrastructure/resources/bastion-init.yml
@@ -8,8 +8,8 @@ rh_subscription:
   add-pool: [ '${rh_subscription_pool_id}' ]
 runcmd:
  - subscription-manager repos --disable="*"
- # - yum-config-manager --disable \*
- - subscription-manager repos --enable="rhel-7-server-rpms" --enable="rhel-7-server-ose-${openshift_major_version}-rpms" --enable="rhel-7-fast-datapath-rpms" --enable="rhel-7-server-ansible-2.4-rpms"
+ - yum-config-manager --disable \*
+ - subscription-manager repos --enable="rhel-7-server-rpms" --enable="rhel-7-server-ose-${openshift_major_version}-rpms" --enable="rhel-7-server-extras-rpms" --enable="rhel-7-fast-datapath-rpms" --enable="rhel-7-server-ansible-2.4-rpms"
  - yum -y install atomic-openshift-utils atomic-openshift-clients
  - curl -O https://bootstrap.pypa.io/get-pip.py
  - python get-pip.py
