--- a/modules/infrastructure/resources/node-init.yml
+++ b/modules/infrastructure/resources/node-init.yml
@@ -4,11 +4,16 @@ write_files:
     permissions: 0644
     owner: root
     content: |
-        GROWPART=true
-        ROOT_SIZE=+100%FREE
         STORAGE_DRIVER=overlay2
 rh_subscription:
   username: ${rhn_username}
   password: '${rhn_password}'
   auto-attach: False
   add-pool: [ '${rh_subscription_pool_id}' ]
+runcmd:
+ - subscription-manager repos --disable="*"
+ - yum-config-manager --disable \*
+ - subscription-manager repos --enable="rhel-7-server-rpms" --enable="rhel-7-server-ose-${openshift_major_version}-rpms" --enable="rhel-7-server-extras-rpms" --enable="rhel-7-fast-datapath-rpms" --enable="rhel-7-server-ansible-2.4-rpms"
+ - yum install -y docker-1.13.1
+ - systemctl enable docker
+ - systemctl start docker
