--- a/modules/infrastructure/resources/template-inventory.yml
+++ b/modules/infrastructure/resources/template-inventory.yml
@@ -20,35 +20,16 @@ OSEv3:
         challenge: true
         kind: 'AllowAllPasswordIdentityProvider'
     os_sdn_network_plugin_name: 'redhat/openshift-ovs-networkpolicy'
-    openshift_node_kubelet_args:
-      kube-reserved: ['cpu=100m,memory=100Mi']
-      system-reserved: ['cpu=100m,memory=100Mi']
-      eviction-hard:
-        - 'memory.available<4%'
-        - 'nodefs.available<4%'
-        - 'nodefs.inodesFree<4%'
-        - 'imagefs.available<4%'
-        - 'imagefs.inodesFree<4%'
-      eviction-soft:
-        - 'memory.available<8%'
-        - 'nodefs.available<8%'
-        - 'nodefs.inodesFree<8%'
-        - 'imagefs.available<8%'
-        - 'imagefs.inodesFree<8%'
-      eviction-soft-grace-period:
-        - 'memory.available=1m30s'
-        - 'nodefs.available=1m30s'
-        - 'nodefs.inodesFree=1m30s'
-        - 'imagefs.available=1m30s'
-        - 'imagefs.inodesFree=1m30s'
     openshift_disable_check: 'disk_availability,memory_availability'
     openshift_master_cluster_hostname: master.${platform_name}.internal
     openshift_master_cluster_public_hostname: ${master_public_dns_name}
     openshift_master_default_subdomain: ${platform_default_subdomain}
     openshift_cloudprovider_kind: aws
     openshift_clusterid: ${platform_name}
-    openshift_hosted_logging_deploy: true
+    openshift_logging_install_logging: true
     openshift_logging_es_pvc_dynamic: true
     openshift_logging_es_memory_limit: 512M
-    openshift_hosted_metrics_deploy: true
+    openshift_metrics_install_metrics: true
     openshift_metrics_cassandra_storage_type: dynamic
+    openshift_master_api_port: 443
+    openshift_master_console_port: 443
