enable dynamic admission controlers

--- a/resources/template-inventory.yml
+++ b/resources/template-inventory.yml
@@ -35,6 +35,7 @@ OSEv3:
     openshift_metrics_hawkular_openshift_agent_image: "openshift3/metrics-hawkular-openshift-agent:v${openshift_major_version}"
     openshift_metrics_heapster_image: "openshift3/metrics-heapster:v${openshift_major_version}"
     openshift_metrics_schema_installer_image: "openshift3/metrics-schema-installer:v${openshift_major_version}"
+    openshift_master_admission_plugin_config: '{"ValidatingAdmissionWebhook": {"configuration": {"apiVersion": "v1", "kind": "DefaultAdmissionConfig", "disable": false}}, "MutatingAdmissionWebhook": { "configuration": { "apiVersion": "v1", "kind": "DefaultAdmissionConfig", "disable": false }}}'
 ${openshift_deployment_type == "openshift-enterprise" ? "" : "#"}    osm_use_cockpit: true
 ${openshift_deployment_type == "openshift-enterprise" ? "" : "#"}    osm_cockpit_plugins: ['cockpit-kubernetes']
     openshift_master_overwrite_named_certificates: ${named_certificate}
