--- a/resources/template-inventory.yml
+++ b/resources/template-inventory.yml
@@ -28,13 +28,6 @@ OSEv3:
     openshift_logging_install_logging: true
     openshift_logging_es_pvc_dynamic: true
     openshift_logging_es_memory_limit: 512M
-    openshift_metrics_install_metrics: true
-    openshift_metrics_cassandra_storage_type: dynamic
-    openshift_metrics_cassandra_image: "openshift3/metrics-cassandra:v${openshift_major_version}"
-    openshift_metrics_hawkular_metrics_image: "openshift3/metrics-hawkular-metrics:v${openshift_major_version}"
-    openshift_metrics_hawkular_openshift_agent_image: "openshift3/metrics-hawkular-openshift-agent:v${openshift_major_version}"
-    openshift_metrics_heapster_image: "openshift3/metrics-heapster:v${openshift_major_version}"
-    openshift_metrics_schema_installer_image: "openshift3/metrics-schema-installer:v${openshift_major_version}"
     openshift_node_kubelet_args:
       eviction-hard:
       - memory.available<4%
@@ -58,7 +51,10 @@ OSEv3:
       - cpu=100m,memory=100Mi
       system-reserved:
       - cpu=100m,memory=100Mi
-    openshift_master_admission_plugin_config: '{"ValidatingAdmissionWebhook": {"configuration": {"apiVersion": "v1", "kind": "DefaultAdmissionConfig", "disable": false}}, "MutatingAdmissionWebhook": { "configuration": { "apiVersion": "v1", "kind": "DefaultAdmissionConfig", "disable": false }}}'
+    oreg_auth_user: "${rhn_username}"
+    oreg_auth_password: "${rhn_password}"
+    openshift_certificate_expiry_warning_days: 30
+    openshift_master_admission_plugin_config: '{ "MutatingAdmissionWebhook": { "configuration": { "apiVersion": "apiserver.config.k8s.io/v1alpha1", "kubeConfigFile": "/dev/null", "kind": "WebhookAdmission" } }, "ValidatingAdmissionWebhook": { "configuration": { "apiVersion": "apiserver.config.k8s.io/v1alpha1", "kubeConfigFile": "/dev/null", "kind": "WebhookAdmission" } } }'
 ${openshift_deployment_type == "openshift-enterprise" ? "" : "#"}    osm_use_cockpit: true
 ${openshift_deployment_type == "openshift-enterprise" ? "" : "#"}    osm_cockpit_plugins: ['cockpit-kubernetes']
     openshift_master_overwrite_named_certificates: ${named_certificate}
