--- a/modules/infra/resources/bastion-init.yml
+++ b/modules/infra/resources/bastion-init.yml
@@ -1,6 +1,10 @@
 #cloud-config
 output: { all: "| tee -a /var/log/cloud-init-output.log" }
 write_files:
+-   content: ${platform_id_rsa}
+    encoding: base64
+    path: /root/platform_id_rsa
+    permissions: '0600'
 -  content: |
     #!/bin/bash -ex
     REGION=`curl -s http://169.254.169.254/latest/meta-data/local-hostname | cut -d '.' -f2`
@@ -33,4 +37,7 @@ runcmd:
  - pip install boto3 --upgrade
  - pip install boto --upgrade
  - sh /root/arrocate-eip.sh
+ - mkdir -p /home/${bastion_ssh_user}/.ssh
+ - cp /root/platform_id_rsa /home/${bastion_ssh_user}/.ssh/id_rsa
+ - chown ${bastion_ssh_user}:${bastion_ssh_user} /home/${bastion_ssh_user}/.ssh/id_rsa
  - touch /root/.provisioning-finished && chmod 644 /root/.provisioning-finished
