--- a/modules/openshift/resources/template-inventory.yaml
+++ b/modules/openshift/resources/template-inventory.yaml
@@ -36,6 +36,8 @@ ${use_google_identity_provider == "true" ? "" : "#"}        hostedDomain: "${goo
     openshift_master_default_subdomain: ${platform_domain}
     openshift_master_bootstrap_auto_approve: true
     openshift_cloudprovider_kind: aws
+    openshift_cloudprovider_aws_access_key: "${platform_aws_access_key_id}"
+    openshift_cloudprovider_aws_secret_key: "${platform_aws_secret_access_key}"
     openshift_clusterid: ${platform_name}
     openshift_logging_install_logging: true
     openshift_logging_es_memory_limit: 1024M
