--- a/modules/openshift/resources/template-inventory.yaml
+++ b/modules/openshift/resources/template-inventory.yaml
@@ -25,8 +25,7 @@ ${use_htpasswd_identity_provider == "true" ? "" : "#"}      - name: 'htpasswd_au
 ${use_htpasswd_identity_provider == "true" ? "" : "#"}        login: true
 ${use_htpasswd_identity_provider == "true" ? "" : "#"}        challenge: true
 ${use_htpasswd_identity_provider == "true" ? "" : "#"}        kind: 'HTPasswdPasswordIdentityProvider'
-${use_htpasswd_identity_provider == "true" ? "" : "#"}    openshift_master_htpasswd_users:
-${use_htpasswd_identity_provider == "true" ? "" : "#"}    - {'admin': '${use_htpassd_admin_pwd_prehashed}'}
+${use_htpasswd_identity_provider == "true" ? "" : "#"}    openshift_master_htpasswd_users: {'admin': '${use_htpassd_admin_pwd_prehashed}'}
 ${use_google_identity_provider == "true" ? "" : "#"}      - name: google
 ${use_google_identity_provider == "true" ? "" : "#"}        challenge: false
 ${use_google_identity_provider == "true" ? "" : "#"}        login: true
